<resources>
    <string name="app_name">To-Do-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="no_data">No Data</string>
    <string name="Title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="delete_all">Delete All</string>
    <string name="sort_by">sort by</string>
    <string name="submit">submit</string>
    <string name="delete">delete</string>
    <string name="priorities">Priorities</string>
    <string name="sort_by_high">sort by High</string>
    <string name="sort_by_low">sort by low</string>
    <string-array name="priority">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>